fixed issue nginx 502 in sparrow-web

--- a/apps/@sparrow-web/deploymentManifests/deployment.yml
+++ b/apps/@sparrow-web/deploymentManifests/deployment.yml
@@ -7,11 +7,11 @@ metadata:
   name: sparrow-web
 spec:
   replicas: 1
-  # strategy:
-  #   type: RollingUpdate
-  #   rollingUpdate:
-  #     maxSurge: 1
-  #     maxUnavailable: 0
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: sparrow-web
@@ -43,14 +43,14 @@ spec:
           #   timeoutSeconds: 5
           #   failureThreshold: 3
           #   successThreshold: 1
-          # readinessProbe:
-          #   tcpSocket:
-          #     port: 1422
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 5
-          #   timeoutSeconds: 5
-            # failureThreshold: 3
-            # successThreshold: 1
+          readinessProbe:
+            tcpSocket:
+              port: 1422
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            timeoutSeconds: 5
+            failureThreshold: 3
+            successThreshold: 1
 
 ---
 apiVersion: v1
