--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@lezer/highlight": "^1.2.0",
     "@microsoft/applicationinsights-web": "^3.3.1",
     "@tauri-apps/api": "^2.0.0-rc",
-    "@tauri-apps/cli": "^2.0.0-beta.1",
+    "@tauri-apps/cli": "^2.0.0-rc",
     "@tauri-apps/plugin-deep-link": "^2.0.0-rc",
     "@tauri-apps/plugin-dialog": "^2.0.1",
     "@tauri-apps/plugin-fs": "^2.0.2",
