feat: add graphql initator to utilize services [#1985]

--- a/packages/@sparrow-common/package.json
+++ b/packages/@sparrow-common/package.json
@@ -31,6 +31,10 @@
     "./types/workspace/collection-base": "./src/types/workspace/collection-base.ts",
     "./types/workspace/http-request-base": "./src/types/workspace/http-request-base.ts",
     "./types/workspace/http-request-dto": "./src/types/workspace/http-request-dto.ts",
+    "./types/workspace/graphql-request-base": "./src/types/workspace/graphql-request-base.ts",
+    "./types/workspace/graphql-request-dto": "./src/types/workspace/graphql-request-dto.ts",
+    "./types/workspace/graphql-request-tab": "./src/types/workspace/graphql-request-tab.ts",
+    "./types/workspace/graphql-request-method": "./src/types/workspace/graphql-request-method.ts",
     "./types/workspace/socket-io-request-base": "./src/types/workspace/socket-io-request-base.ts",
     "./types/workspace/socket-io-request-dto": "./src/types/workspace/socket-io-request-dto.ts",
     "./types/workspace/socket-io-request-tab": "./src/types/workspace/socket-io-request-tab.ts",
