--- a/packages/@sparrow-workspaces/package.json
+++ b/packages/@sparrow-workspaces/package.json
@@ -20,6 +20,7 @@
     "./features/socket-explorer/utils": "./src/features/socket-explorer/utils/index.ts",
     "./features/socketio-explorer/utils": "./src/features/socketio-explorer/utils/index.ts",
     "./features/rest-explorer/store": "./src/features/rest-explorer/store/index.ts",
+    "./features/graphql-explorer/store": "./src/features/graphql-explorer/store/index.ts",
     "./features/socket-explorer/store": "./src/features/socket-explorer/store/index.ts",
     "./features/socketio-explorer/store": "./src/features/socketio-explorer/store/index.ts",
     "./components": "./src/components/index.ts",
