--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "desktop-start": "yarn workspace @sparrow/desktop tauri dev",
-    "desktop-build": "yarn workspace @sparrow/desktop tauri build --debug",
-    "desktop-build-mac-universal": "arch -x86_64 yarn workspace @sparrow/desktop tauri build --target universal-apple-darwin --debug --verbose",
+    "desktop-build": "yarn workspace @sparrow/desktop tauri build --debug --verbose",
+    "desktop-build-mac-universal": "yarn workspace @sparrow/desktop tauri build --target universal-apple-darwin --debug --verbose",
     "web-start": "yarn workspace @sparrow/web dev",
     "web-build": "yarn workspace @sparrow/web build"
   },
