--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -103,7 +103,16 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   release_macos:
-    runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: 'macos-latest'
+            arch: 'aarch64-apple-darwin'
+          - platform: 'macos-latest'
+            arch: 'x86_64-apple-darwin'
+
+    runs-on: ${{ matrix.platform }}
     environment: development
     needs: release_win
 
@@ -148,7 +157,7 @@ jobs:
 
       - name: Build Universal build for MAC
         run: |
-          yarn desktop-build-mac-universal
+          ${{ matrix.arch_prefix }} yarn desktop-build-mac-universal
         env:
           APPLE_SIGNING_IDENTITY: "${{ secrets.APPLE_SIGNING_IDENTITY }}"
           APPLE_CERTIFICATE: "${{ secrets.APPLE_CERTIFICATE }}"
